--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     text-decoration: none;
+    box-sizing: border-box;
 }
 
 body {
@@ -103,6 +104,11 @@ p {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
+    }
+
+    .lg-section {
+        justify-content: flex-start;
+        min-height: 88vh;
     }
 
     .section-alt {
@@ -287,6 +293,15 @@ p {
         background-color: #fcfcfc;;
         box-shadow: 2px 2px 10px #c6c6c6;
         transition: all 0.5s ease;
+        text-align: center;
+    }
+
+    .lg-active {
+        display: block;
+    }
+
+    .lg-disabled {
+        display: none;
     }
 
     .lg:hover {
@@ -302,6 +317,7 @@ p {
         width: 95%;
         object-fit: cover;
         padding: .5rem 0;
+        margin: 0 auto;
     }
 
     .lg h2 {
@@ -395,6 +411,80 @@ p {
     .lg-misc {
         background-image: url(/img/Locals-Guide/Misc/misc-background.jpg);
     }
+
+    .search-form {
+        margin: 2rem auto;
+        outline: none;
+        text-align: center;
+        width: 95%;
+        background-color: #fcfcfc;
+        display: flex;
+        justify-content: space-around;    
+    }
+
+    .search-input{
+        padding: .5rem;
+        font-size: 1rem;
+        font-family: "Roboto", "Helvetica", sans-serif;
+        border: none;
+        outline: none;
+        width: 70%;
+        flex: 1;
+        color: #111;
+    }
+
+    .search-btn, .more-btn   {
+        background-color: #111;
+        color: #fcfcfc;
+        width: 10%;
+        padding: .5rem;
+        font-size: 1rem;
+        border-left: none;
+        cursor: pointer;
+        transition: all 0.5s ease;
+        outline: none;
+    }
+
+    .search-btn:hover, .more-btn:hover {
+        background-color: #000000;
+    }
+
+    .search-more {
+        width: 95%;
+        background-color: #111;
+        margin: -2rem auto 2rem auto;
+        padding: .5rem 0;
+        display: none;
+
+    }
+
+    .search-more-active {
+        display: block;
+    }
+
+    .search-more li {
+        opacity: 0;
+    }
+
+
+    .search-more ul {
+        list-style: none;
+    }
+
+    .search-more a {
+        color: #fcfcfc;
+        font-family: "Oswald", "Helvetica", sans-serif;
+        font-size: 1.75rem;
+        text-decoration: none;
+        text-transform: uppercase;
+        padding: 0 2rem;
+        transition: all 0.5s ease;
+    }
+
+    .search-more a:hover {
+        color: #18A360
+    }
+
 
     /* Footer - Mobile */
     footer {
