--- a/css/main.css
+++ b/css/main.css
@@ -108,7 +108,7 @@ p {
 
     .lg-section {
         justify-content: flex-start;
-        min-height: 88vh;
+        min-height: 80vh;
     }
 
     .section-alt {
@@ -142,7 +142,7 @@ p {
         width: 100%;
         display: flex;
         flex-direction: row;
-        justify-content: space-evenly;
+        justify-content: space-between;
         min-height: 12vh;
         transition: all 0.5s ease;
         position: sticky;
@@ -354,6 +354,13 @@ p {
         padding: 0 2rem;
     }
 
+    .about-me-img {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
     .about-me-img img {
         width: 90%;
         margin: 0 auto;
@@ -419,7 +426,8 @@ p {
         width: 95%;
         background-color: #fcfcfc;
         display: flex;
-        justify-content: space-around;    
+        justify-content: space-around;
+        box-shadow: 2px 2px 10px #c9c9c9;   
     }
 
     .search-input{
@@ -439,10 +447,23 @@ p {
         width: 10%;
         padding: .5rem;
         font-size: 1rem;
-        border-left: none;
+        border: 1px solid #2c2c2c;
         cursor: pointer;
         transition: all 0.5s ease;
         outline: none;
+    }
+
+    .delete-btn {
+        background-color: #b60000;
+        color: #fcfcfc;
+        width: 10%;
+        padding: .5rem;
+        font-size: 1rem;
+        border: none;
+        cursor: pointer;
+        transition: all 0.5s ease;
+        outline: none;
+        display: none;
     }
 
     .search-btn:hover, .more-btn:hover {
@@ -625,6 +646,19 @@ p {
     /* Local's Guide - Tablet */
     .lg-option a {
         font-size: 4rem;
+    }
+
+    .search-form {
+        width: 70%;  
+    }
+
+    .search-btn, .more-btn, .delete-btn   {
+        width: 8%;
+    }
+
+    .search-more {
+        width: 70%;
+
     }
 
     /* Footer - Tablet */
@@ -865,6 +899,10 @@ p {
         width: 60%;
     }
 
+    .about-me-bio .socials img {
+        width: 2.5rem;
+    }
+
     /* Local's Guide - Desktop */
     .lg-options {
         flex-direction: row;
@@ -881,8 +919,22 @@ p {
         width: 24vw;
         height: 88vh;
         font-size: 3rem;
+    }
+
+    .search-form {
+        margin: 3rem auto 2rem auto;
+        width: 50%;  
+    }
+
+    .search-btn, .more-btn, .delete-btn   {
+        width: 6%;
+    }
+
+    .search-more {
+        width: 50%;
 
     }
+
 
     /* Footer - Desktop */
     footer {
