--- a/css/main.css
+++ b/css/main.css
@@ -133,6 +133,10 @@ p {
         justify-content: space-around;
     }
 
+    .section-404 {
+        min-height: 70vh;
+    }
+
     .lg-section {
         justify-content: flex-start;
         min-height: 80vh;
@@ -520,8 +524,11 @@ p {
         width: 95%;
         background-color: #111;
         margin: -2rem auto 2rem auto;
-        padding: .5rem 0;
+        padding: .75rem 0;
         display: none;
+        position: absolute;
+        left: 2.5%;
+        z-index: 10;
 
     }
 
@@ -734,6 +741,35 @@ p {
         text-align: center;
     }
 
+    /* 404 page - Mobile */
+    .container-404 {
+        width: 70%;
+        min-height: 30vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        margin: 0 auto;
+    }
+
+    .container-404 h2 {
+        font-size: 4rem;
+    }
+
+    .container-404 p {
+        font-size: 1.5rem;
+        padding: .5rem 0 2rem 0;
+    }
+
+    .container-404 p a {
+        font-weight: 500;
+        color: #111;
+    }
+
+    .container-404 p a:hover {
+        color: #18A360;
+        text-decoration: underline;
+    }
+
     /* Footer - Mobile */
     footer {
         min-height: 20vh;
@@ -893,6 +929,7 @@ p {
 
     .search-more {
         width: 70%;
+        left: 15%;
     }
 
     .error-message {
@@ -1036,7 +1073,7 @@ p {
     }
 
     .contact-btn h6 {
-        font-size: 1.25rem;
+        font-size: 1.5rem;
     }
 
     /* Line - Desktop */
@@ -1057,7 +1094,7 @@ p {
     }
 
     .logo img {
-        height: 9.5vh;
+        height: 9.75vh;
         padding: 0 .5rem;
     }
 
@@ -1066,7 +1103,7 @@ p {
     }
 
     .socials img {
-        width: 2rem;
+        width: 2.25rem;
     }
 
     .socials img:hover {
@@ -1116,7 +1153,7 @@ p {
     }
 
     .home-landing h2 {
-        font-size: 2.5rem;
+        font-size: 3rem;
     }
 
     .home-landing p {
@@ -1208,6 +1245,7 @@ p {
 
     .search-more {
         width: 50%;
+        left: 25%;
     }
 
     .error-message {
