--- a/css/main.css
+++ b/css/main.css
@@ -236,6 +236,7 @@ p {
         text-transform: uppercase;
         padding: 0 2rem;
         transition: all 0.5s ease;
+        opacity: 1;
     }
 
     .nav-list a:hover {
@@ -1282,7 +1283,7 @@ p {
 
     .blog-post-section h2 {
         font-size: 1.75rem;
-        padding-bottom: .5rem;
+        padding: 0 10% .5rem 10%;
     }
 
     .blog-post-section audio {
